--- a/about-us.html
+++ b/about-us.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <div class="container-top">
+     <div class="container-top">
       <div class="top-wrap">
         <div class="custom-container">
           <div class="logo">
@@ -56,10 +56,7 @@
                         <a href="about-us.html">Despre Noi</a>
                       </li>
                       <li class="">
-                        <a href="/">Portofoliu</a>
-                      </li>
-                      <li class="">
-                        <a href="/">Ce facem?</a>
+                        <a href="portfolio.html">Portofoliu</a>
                       </li>
                       <li class="">
                         <a href="#contact-us">Contact</a>
@@ -90,8 +87,14 @@
 
         </div>
       </div>
+       <div class="anchor">
+        <a href="#anchor">
+            <i class="fas fa-chevron-down"></i>
+        </a>
+      </div>
     </div>
-    <div class="about-section">
+    <div id="anchor"></div>
+    <div class="about-section" >
       <div class="team_member">
 
           <div class="row">
@@ -140,6 +143,38 @@
 
       </div>
     </div>
+      <div class="gray-bg" id="contact-us">
+    <div class="custom-container pad">
+        <form action="" class="contact-us">
+            <b class="blue">
+            Contactează-ne!
+          </b>
+            <span class="nothing">
+            Salut, dacă ai vreo întrebare, nu ezita să ne scrii.  O să îți răspundem în cel mai scurt timp!
+          </span>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="element_label">
+                        <span class="">Nume Complet*</span>
+                        <input type="text">
+                    </div>
+                    <div class="element_label">
+                        <span class="">Adresa Email</span>
+                        <input type="text">
+                    </div>
+                    <div class="element_label">
+                        <span class="">Numar Telefon</span>
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <textarea name="" id=""></textarea>
+                    <input value="Trimite" class="btn blue-btn" type="submit">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
     <div class="footer-wrapper">
       <div class="custom-container">
         <div class="row">
