--- a/index.html
+++ b/index.html
@@ -59,9 +59,6 @@
                         <a href="portfolio.html">Portofoliu</a>
                       </li>
                       <li class="">
-                        <a href="/">Ce facem?</a>
-                      </li>
-                      <li class="">
                         <a href="#contact-us">Contact</a>
                       </li>
                       <li class="special-btn">
@@ -95,7 +92,7 @@
       </div>
       <div class="anchor">
         <a href="#why-us">
-          <img src="" alt="">
+            <i class="fas fa-chevron-down"></i>
         </a>
       </div>
     </div>
