--- a/logo-order.html
+++ b/logo-order.html
@@ -56,10 +56,7 @@
                         <a href="about-us.html">Despre Noi</a>
                       </li>
                       <li class="">
-                        <a href="/">Portofoliu</a>
-                      </li>
-                      <li class="">
-                        <a href="/">Ce facem?</a>
+                        <a href="portfolio.html">Portofoliu</a>
                       </li>
                       <li class="">
                         <a href="#contact-us">Contact</a>
