--- a/website-order.html
+++ b/website-order.html
@@ -29,77 +29,137 @@
   </head>
 
   <body>
-    <div class="container-top">
-      <div class="top-wrap">
-        <div class="custom-container">
-          <div class="logo">
-            <a href="index.html">
-              <img src="images/logo.png" alt="" class="initial-logo">
-              <img src="images/logo-nav.png" alt="" class="scrolled-logo">
-            </a>
-          </div>
-          <div id="main_nav">
-            <div id="nav">
-              <nav class="navbar navbar-default navbar-inverse">
-                <div class="container-fluid">
-                  <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#content_section_b" aria-expanded="false">
-                      <span class="sr-only">Toggle navigation</span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                    </button>
-                  </div>
-                  <div id="content_section_b" class="collapse navbar-collapse">
-                    <ul id="nav" class="dropdown nav navbar-nav">
-                      <li class="">
-                        <a href="about-us.html">Despre Noi</a>
-                      </li>
-                      <li class="">
-                        <a href="/">Portofoliu</a>
-                      </li>
-                      <li class="">
-                        <a href="/">Ce facem?</a>
-                      </li>
-                      <li class="">
-                        <a href="#contact-us">Contact</a>
-                      </li>
-                      <li class="special-btn">
-                        <a href="/">Comanda</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+ 
 
   <div class="custom-container pad">
-  <div rel="#website" class="check-id">
-     <h1>Coamda in 3 pasi!</h1>
-      <form action="" class="order-form">
-       <div class="step first-section active-section">
-         <span class="blue">Pasul 1:</span>
-         <b>Date Personale:</b>
-         <a href="" class="btn next-step">Urmatorul Pas</a>
-       </div>
-       <div class="step second-section">
-         <span class="blue">Pasul 2:</span>
-         <b>Date Personale:</b>
-           <a href="" class="btn next-step">Urmatorul Pas</a>
+  <div class="order-wrapper">
 
-       </div>
-        <div class="step third-section">
-         <span class="blue">Pasul 3:</span>
-         <b>Date Personale:</b>
-            <a href="" class="btn next-step">Urmatorul Pas</a>
+        <!-- Order - Title+Subtitle -->
+        <h1>Mai avem nevoie de câteva informatii</h1>
+        <h6 class="order-name">Logo Design</h6>
+        <form action="" class="order-form">
 
-       </div>
-     </form>
-  </div>
+          <!-- Order - 1st Section -->
+          <div class="step first-section active-section">
+
+            <div id="step-title">
+              <span class="blue">Pasul 1:</span>
+              <b>Date Personale</b>
+            </div>
+
+            <!-- Order - inputs -->
+            <div class="data">
+              <h6>Nume Complet:</h6>
+              <input type="text" name="name" value="" placeholder="e.g Popescu Ioan" class="inp">
+
+              <h6>Email*</h6>
+              <input type="text" name="email" value="" placeholder="nume@gmail.com"  class="inp">
+
+              <h6>Telefon</h6>
+              <input type="text" name="" value="" class="inp">
+
+              <div id="check"><input type="checkbox" name="" value=""> Am verificat ca toate datele sa fie introduse corect</div>
+
+            </div>
+            <div class="row step-buttons">
+              <div class="col-md-6">
+                <a href="">Inapoi</a>
+              </div>
+              <div class="col-md-6 right">
+                <a href="" class="order-btn next-step">Urmatorul Pas</a>
+              </div>
+            </div>
+
+
+
+          </div>
+
+          <!-- Order - 2nd Section -->
+          <div class="step second-section">
+
+            <div id="step-title">
+              <span class="blue">Pasul 2:</span>
+              <b>Informatii Logo</b>
+            </div>
+<div class="data">
+            <div class="logo-info">
+              <h6>Numele care sa apara in logo*</h6>
+              <input type="text" name="name" value="" placeholder="e.g Logo Company" class="inp">
+
+              <h6>Slogan (daca exista)</h6>
+              <input type="text" name="email" value="" placeholder="e.g slogan"  class="inp">
+
+              <h6>Informatii despre compania ta</h6>
+              <textarea name="name"></textarea>
+            </div>
+            </div>
+            <div class="row step-buttons">
+              <div class="col-md-6">
+
+              </div>
+              <div class="col-md-6 right">
+                <a href="" class="order-btn next-step">Urmatorul Pas</a>
+              </div>
+            </div>
+
+
+          </div>
+
+          <!-- Order - 3rd Section -->
+          <div class="step third-section">
+
+            <div id="step-title">
+              <span class="blue">Pasul 3:</span>
+              <b>Aspect Logo</b>
+            </div>
+<div class="data">
+            <div class="logo-info">
+              <h6>Culori</h6>
+              <input type="text" name="name" value="" placeholder="e.g rosu, verde, gri, etc." class="inp">
+              <div class="type-of-logo">
+                <span>Alege logo preferat:</span>   
+  <label>
+     <input type="checkbox" name="" value=""/>
+     <img src="https://dummyimage.com/100/000/fff">
+  </label>
+  
+  <label>
+    <input type="checkbox" name="" value=""/>
+     <img src="https://dummyimage.com/100/000/fff">
+  </label>
+  
+  <label>
+    <input type="checkbox" name="" value=""/>
+      <img src="https://dummyimage.com/100/000/fff">
+  </label>
+  
+  <label>
+     <input type="checkbox" name="" value=""/>
+    <img src="https://dummyimage.com/100/000/fff">
+  </label>
+    <label>
+     <input type="checkbox" name="" value=""/>
+    <img src="https://dummyimage.com/100/000/fff">
+  </label>
+    <label>
+     <input type="checkbox" name="" value=""/>
+    <img src="https://dummyimage.com/100/000/fff">
+  </label>
+         
+              </div>
+            </div>
+            </div>
+            <div class="row step-buttons">
+              <div class="col-md-6">
+              </div>
+              <div class="col-md-6 right">
+                <a href="" class="order-btn next-step">Finalizare</a>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+
 
 
 </div>
