--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
   </head>
 
   <body>
-    <div class="container-top">
+    <div class="container-top change-top">
       <div class="top-wrap">
         <div class="custom-container">
           <div class="logo">
@@ -75,7 +75,7 @@
         </div>
       </div>
     </div>
-    <div class="banner about-banner">
+    <div class="banner portofolio-banner">
       <div class="v-align">
         <div class="custom-container center">
             <div class="header-text center">
