--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
   </head>
 
   <body>
-    <div class="container-top change-top">
+    <div class="container-top">
       <div class="top-wrap">
         <div class="custom-container">
           <div class="logo">
@@ -77,16 +77,15 @@
     </div>
     <div class="banner portofolio-banner">
       <div class="v-align">
-        <div class="custom-container center">
-            <div class="header-text center">
-              <h2>
-                AFLĂ CINE SUNTEM!
-              </h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do edolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            </p>
+        <div class="custom-container">
+          <div class="row">
+            <div class="col-md-8 ">
+              <h1>PORTO <br> FOLIU.</h1>
             </div>
-
+            <div class="col-md-4 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s">
+              
+            </div>
+          </div>
         </div>
       </div>
        <div class="anchor">
