--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <link href="css/default.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700,900" rel="stylesheet">
     <link rel='icon' href='images/favicon.ico' >
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
@@ -75,11 +75,11 @@
         </div>
       </div>
     </div>
-    <div class="banner portofolio-banner">
+    <div class="banner portfolio-banner">
       <div class="v-align">
         <div class="custom-container">
           <div class="row">
-            <div class="col-md-8 ">
+            <div class="col-md-8 fadeInLeft wow">
               <h1>PORTO <br> FOLIU.</h1>
             </div>
             <div class="col-md-4 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s">
@@ -107,15 +107,16 @@
         </div>
     <div class="projects-wrapper filtr-container">
 
-        <div class="project filtr-item" data-category="webdesign">
-          <img src="images/etradlogo.jpg" alt="">
+        
+       <div class="project filtr-item" data-category="photography">
+          <img src="images/aripaulogo.jpg" alt="">
           <div class="open-project">
             <span>PROJECT NAME</span>
             <a href=""><i class="fas fa-share"></i></a>
           </div>
         </div>
-       <div class="project filtr-item" data-category="photography">
-          <img src="images/aripaulogo.jpg" alt="">
+        <div class="project filtr-item" data-category="webdesign">
+          <img src="images/etradlogo.jpg" alt="">
           <div class="open-project">
             <span>PROJECT NAME</span>
             <a href=""><i class="fas fa-share"></i></a>
