--- a/about-us.html
+++ b/about-us.html
@@ -73,26 +73,25 @@
         </div>
       </div>
     </div>
-    <div class="banner about-banner">
-      <div class="v-align">
-        <div class="custom-container center">
-            <div class="header-text center">
-              <h2>
-                AFLĂ CINE SUNTEM!
-              </h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do edolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            </p>
-            </div>
+   <div class="banner about-banner">
+    <div class="v-align">
+      <div class="custom-container">
+        <div class="row">
+          <div class="col-md-8 fadeInLeft wow">
+            <h1 class="banner_title">DESPRE <br> NOI.</h1>
+          </div>
+          <div class="col-md-4 header-text wow fadeInRight" data-wow-duration="2s" data-wow-delay="0.3s">
 
+          </div>
         </div>
       </div>
-       <div class="anchor">
-        <a href="#anchor">
+    </div>
+    <div class="anchor">
+      <a href="#anchor">
             <i class="fas fa-chevron-down"></i>
         </a>
-      </div>
     </div>
+  </div>
     <div id="anchor"></div>
     <div class="about-section" >
       <div class="team_member">
