--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
       <div class="custom-container">
         <div class="row">
           <div class="col-md-8 fadeInLeft wow">
-            <h1>PORTO <br> FOLIU.</h1>
+            <h1 class="banner_title">PORTO <br> FOLIU.</h1>
           </div>
           <div class="col-md-4 header-text wow fadeInRight" data-wow-duration="2s" data-wow-delay="0.3s">
 
