--- a/logo-order.html
+++ b/logo-order.html
@@ -82,7 +82,7 @@
         <!-- Order - Title+Subtitle -->
         <h1>Mai avem nevoie de câteva informatii</h1>
         <h6 class="order-name">Logo Design</h6>
-        <form action="" class="order-form">
+        <form action="https://script.google.com/macros/s/AKfycbym8m3AGk65NsHUD0W2b4LX-kl_FA74mk1JNpkYBg/exec" method="POST" id="gform" class="order-form">
 
           <!-- Order - 1st Section -->
           <div class="step first-section active-section">
@@ -135,7 +135,7 @@
               <input type="text" name="email" value="" placeholder="e.g slogan"  class="inp">
 
               <h6>Informatii despre compania ta</h6>
-              <textarea name="name"></textarea>
+              <textarea name="message"></textarea>
             </div>
             </div>
             <div class="row step-buttons">
@@ -160,24 +160,24 @@
 <div class="data">
             <div class="logo-info">
               <h6>Culori</h6>
-              <input type="text" name="name" value="" placeholder="e.g rosu, verde, gri, etc." class="inp">
+              <input type="text" name="color" value="" placeholder="e.g rosu, verde, gri, etc." class="inp">
               <div class="type-of-logo">
-                <span>Alege logo preferat:</span>   
+                <span>Alege logo preferat:</span>
   <label>
      <input type="checkbox" name="" value=""/>
      <img src="https://dummyimage.com/100/000/fff">
   </label>
-  
+
   <label>
     <input type="checkbox" name="" value=""/>
      <img src="https://dummyimage.com/100/000/fff">
   </label>
-  
+
   <label>
     <input type="checkbox" name="" value=""/>
       <img src="https://dummyimage.com/100/000/fff">
   </label>
-  
+
   <label>
      <input type="checkbox" name="" value=""/>
     <img src="https://dummyimage.com/100/000/fff">
@@ -190,7 +190,7 @@
      <input type="checkbox" name="" value=""/>
     <img src="https://dummyimage.com/100/000/fff">
   </label>
-         
+
               </div>
             </div>
             </div>
@@ -198,7 +198,8 @@
               <div class="col-md-6">
               </div>
               <div class="col-md-6 right">
-                <a href="" class="order-btn next-step">Finalizare</a>
+
+                <button type="submit" class="order-btn next-step" name="button">Finalizare</button>
               </div>
             </div>
           </div>
