--- a/website-order.html
+++ b/website-order.html
@@ -80,7 +80,7 @@
 
         <!-- Order - Title+Subtitle -->
         <h1>Mai avem nevoie de câteva informatii</h1>
-        <h6 class="order-name">Logo Design</h6>
+        <h6 class="order-name">Website Design</h6>
         <form action="" class="order-form">
 
           <!-- Order - 1st Section -->
@@ -123,7 +123,7 @@
 
             <div id="step-title">
               <span class="blue">Pasul 2:</span>
-              <b>Informatii Logo</b>
+              <b>Informatii Website</b>
             </div>
 <div class="data">
             <div class="logo-info">
