--- a/about-us.html
+++ b/about-us.html
@@ -121,8 +121,8 @@
 
           <div class="row">
 
-            <div class="col-md-5 edge edge-left">
-                  <img class="team_photo"src="images/bojor.png" alt="">
+            <div class="col-md-5 edge edge-left wow fadeInLeft">
+                  <img class="team_photo wow fadeInRight" data-wow-duration="3s" data-wow-delay="0.5s" src="images/bojor.png" alt="">
             </div>
                <div class="col-md-7">
                  <div class="v-align right">
