--- a/portfolio.html
+++ b/portfolio.html
@@ -172,9 +172,9 @@
           <span>Am nevoie de</span>
           <select id="order-input">
                 <option value="0">Alege din lista.</option>
-                <option value="/website-order.html">Website</option>
-                <option value="/logo-order.html">Logo</option>
-                <option value="/design-order.html">Design</option>
+                 <option value="/website-order.html" class="small-select">Website</option>
+            <option value="/logo-order.html" class="small-select">Logo</option>
+            <option value="/design-order.html" class="small-select">Design</option>
               </select>
           <div>
             <input type="submit" class="btn" value="continua" onclick="getOrder()">
