--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           <span>Am nevoie de</span>
           <select id="order-input">
             <option value="0">Alege din lista.</option>
-            <option value="/website-order.html" class="snall-select">Website</option>
+            <option value="/website-order.html" class="small-select">Website</option>
             <option value="/logo-order.html" class="small-select">Logo</option>
             <option value="/design-order.html" class="small-select">Design</option>
           </select>
