--- a/index.html
+++ b/index.html
@@ -243,20 +243,12 @@
 
         <div class="col-md-6 center">
           <span>Am nevoie de</span>
-           <select id="order-input">
-                <option value="0" class="small-select">
-               <span class="blue">Alege din lista.</span> 
-              </option>
-                 <option value="/website-order.html" class="small-select">
-                <div class="blue">Website</div> 
-               </option>
-            <option value="/logo-order.html" class="small-select">
-           <span class="blue">Logo</span> 
-          </option>
-            <option value="/design-order.html" class="small-select">
-           <span class="blue"> Design</span>
-          </option>
-              </select>
+          <select id="order-input">
+            <option value="0" class="small-select">Alege din lista.</option>
+            <option value="/website-order.html" class="small-select">Website</option>
+            <option value="/logo-order.html" class="small-select">Logo</option>
+            <option value="/design-order.html" class="small-select">Design</option>
+          </select>
           <div>
             <input type="submit" class="btn" value="continua" onclick="getOrder()">
           </div>
