--- a/about-us.html
+++ b/about-us.html
@@ -110,8 +110,8 @@
           </div>
           </div>
             </div>
-            <div class="col-md-5 edge edge-right">
-              <img class="team_photo"src="images/balaj.png" alt="">
+            <div class="col-md-5 edge edge-right wow fadeInRight">
+              <img class="team_photo fadeInLeft wow"src="images/balaj.png" data-wow-duration="3s" data-wow-delay="0.5s" >
             </div>
           </div>
 
