--- a/website-order.html
+++ b/website-order.html
@@ -62,7 +62,7 @@
                         <a href="#contact-us">Contact</a>
                       </li>
                       <li class="special-btn">
-                        <a href="/">Comanda</a>
+                       <a href="order.html">Comanda</a>
                       </li>
                     </ul>
                   </div>
